[package]
name = "xand-shield"
version = "0.0.1"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-program = "2.0.0"
common = { path = "../common" }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
